# nonebot_plugin_cogvideox

./: README.md  pyproject.toml
nonebot_plugin_cogvideox/: __init__.py  config.py
